--- a/DemansAppWebApi/appsettings.json
+++ b/DemansAppWebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionStrings": "data source=(localdb)\\mssqllocaldb;initial catalog=DemansApp;Trusted_Connection = True;MultipleActiveResultSets = true; TrustServerCertificate=True;"
+    "ConnectionStrings": "data source= LAPTOP-P7QFSVAI\\MSSQLSERVER02; initial catalog=DB_DemansApp;Trusted_Connection = True;MultipleActiveResultSets = true; TrustServerCertificate=True;"
   }
 }
